--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/vue": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
     "@vueuse/core": "^14.1.0",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
     "marked": "^17.0.1",
@@ -26,6 +27,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.21",
     "@types/qrcode": "^1.5.6",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
